--- a/CPS/src/CPS/View/OccasionalCustomer.fxml
+++ b/CPS/src/CPS/View/OccasionalCustomer.fxml
@@ -1,98 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.media.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
-      <Button layoutX="13.0" layoutY="252.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="63.0" text="back" />
-      <Button layoutX="401.0" layoutY="150.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="427.0" layoutY="75.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="427.0" layoutY="44.0" mnemonicParsing="false" text="Button" />
-      <Label layoutX="111.0" layoutY="6.0" text="please enter the following requirements" />
-      <TextField layoutX="148.0" layoutY="111.0" text="car number:" />
-      <TextField layoutX="134.0" layoutY="69.0" text="id:" />
-      <TextField layoutX="142.0" layoutY="156.0" text="car park:" />
-      <TextField layoutX="142.0" layoutY="212.0" text="email:" />
-      <TextField layoutX="148.0" layoutY="187.0" text="end date and time:" />
-      <DatePicker layoutX="107.0" layoutY="240.0" />
+      <Button fx:id="Occasional_Customer_back_btn" layoutX="14.0" layoutY="265.0" mnemonicParsing="false" onAction="#Occasional_Customer_back" prefHeight="25.0" prefWidth="63.0" text="&lt;&lt; back" />
+      <Button fx:id="Occasional_Customer_order" layoutX="176.0" layoutY="252.0" mnemonicParsing="false" onAction="#Occasional_Customer_Order" prefHeight="25.0" prefWidth="149.0" text="Order" />
+      <Label layoutX="77.0" layoutY="9.0" text="please provide the following requirements:" underline="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="Occasional_Customer_car_number" layoutX="176.0" layoutY="76.0" promptText="car number:" />
+      <TextField fx:id="Occasional_Customer_id" layoutX="176.0" layoutY="45.0" promptText="id:" />
+      <TextField fx:id="Occasional_Customer_car_park" layoutX="176.0" layoutY="108.0" promptText="car park:" />
+      <TextField fx:id="Occasional_Customer_email" layoutX="176.0" layoutY="138.0" promptText="email:" />
+      <TextField fx:id="Occasional_Customer_end_time" layoutX="176.0" layoutY="207.0" promptText="hour : minute" />
+      <DatePicker fx:id="Occasional_Customer_end_date" layoutX="176.0" layoutY="171.0" onAction="#DatePicked" prefHeight="25.0" prefWidth="149.0" promptText="Choose Date" />
       <Label layoutX="76.0" layoutY="36.0" />
-      <Label layoutX="53.0" layoutY="107.0" text="hello_msg" />
-      <Label layoutX="60.0" layoutY="103.0" text="hello_msg" />
-      <Label layoutX="53.0" layoutY="115.0" text="hello_msg" />
-      <Label layoutX="60.0" layoutY="142.0" text="hello_msg" />
-      <SplitMenuButton layoutX="77.0" layoutY="32.0" mnemonicParsing="false" text="select hour">
-        <items>
-          <MenuItem mnemonicParsing="false" text="0" />
-          <MenuItem mnemonicParsing="false" text="1" />
-            <MenuItem mnemonicParsing="false" text="2" />
-            <MenuItem mnemonicParsing="false" text="3" />
-            <MenuItem mnemonicParsing="false" text="4" />
-            <MenuItem mnemonicParsing="false" text="5" />
-            <MenuItem mnemonicParsing="false" text="6" />
-            <MenuItem mnemonicParsing="false" text="7" />
-            <MenuItem mnemonicParsing="false" text="8" />
-            <MenuItem mnemonicParsing="false" text="9" />
-            <MenuItem mnemonicParsing="false" text="10" />
-            <MenuItem mnemonicParsing="false" text="11" />
-            <MenuItem mnemonicParsing="false" text="12" />
-            <MenuItem mnemonicParsing="false" text="13" />
-            <MenuItem mnemonicParsing="false" text="14" />
-            <MenuItem mnemonicParsing="false" text="15" />
-            <MenuItem mnemonicParsing="false" text="16" />
-            <MenuItem mnemonicParsing="false" text="17" />
-            <MenuItem mnemonicParsing="false" text="18" />
-            <MenuItem mnemonicParsing="false" text="19" />
-            <MenuItem mnemonicParsing="false" text="20" />
-            <MenuItem mnemonicParsing="false" text="21" />
-            <MenuItem mnemonicParsing="false" text="22" />
-            <MenuItem mnemonicParsing="false" text="23" />
-        </items>
-      </SplitMenuButton>
-      <SplitMenuButton layoutX="32.0" layoutY="63.0" mnemonicParsing="false" text="select minute">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-            <MenuItem mnemonicParsing="false" text="23" />
-            <MenuItem mnemonicParsing="false" text="22" />
-            <MenuItem mnemonicParsing="false" text="21" />
-            <MenuItem mnemonicParsing="false" text="20" />
-            <MenuItem mnemonicParsing="false" text="19" />
-            <MenuItem mnemonicParsing="false" text="18" />
-            <MenuItem mnemonicParsing="false" text="17" />
-            <MenuItem mnemonicParsing="false" text="16" />
-            <MenuItem mnemonicParsing="false" text="15" />
-            <MenuItem mnemonicParsing="false" text="14" />
-            <MenuItem mnemonicParsing="false" text="13" />
-            <MenuItem mnemonicParsing="false" text="12" />
-            <MenuItem mnemonicParsing="false" text="11" />
-            <MenuItem mnemonicParsing="false" text="10" />
-            <MenuItem mnemonicParsing="false" text="9" />
-            <MenuItem mnemonicParsing="false" text="8" />
-            <MenuItem mnemonicParsing="false" text="7" />
-            <MenuItem mnemonicParsing="false" text="6" />
-            <MenuItem mnemonicParsing="false" text="5" />
-            <MenuItem mnemonicParsing="false" text="4" />
-            <MenuItem mnemonicParsing="false" text="3" />
-            <MenuItem mnemonicParsing="false" text="2" />
-            <MenuItem mnemonicParsing="false" text="1" />
-            <MenuItem mnemonicParsing="false" text="0" />
-         </items>
-      </SplitMenuButton>
-      <SplitMenuButton layoutX="23.0" layoutY="187.0" mnemonicParsing="false" text="test">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-            <MenuItem mnemonicParsing="false" text="Action 2" />
-            <MenuItem mnemonicParsing="false" text="Action 1" />
-        </items>
-      </SplitMenuButton>
+      <Label layoutX="100.0" layoutY="80.0" text="car number:" />
+      <Label layoutX="105.0" layoutY="49.0" text="id:" />
+      <Label layoutX="101.0" layoutY="112.0" prefHeight="17.0" prefWidth="46.0" text="car park:" />
+      <Label layoutX="102.0" layoutY="142.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
+      <Label layoutX="101.0" layoutY="175.0" prefHeight="17.0" prefWidth="52.0" text="end date:" />
+      <Label layoutX="102.0" layoutY="211.0" prefHeight="17.0" prefWidth="52.0" text="end time" />
    </children>
 </AnchorPane>
