--- a/CPS/src/CPS/View/loginView.fxml
+++ b/CPS/src/CPS/View/loginView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.web.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
@@ -8,28 +9,27 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.LoginViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.LoginViewController">
    <children>
-      <Button fx:id="login_btn" layoutX="191.0" layoutY="227.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="106.0" text="Log in" />
-      <RadioButton fx:id="manager_radio" layoutX="81.0" layoutY="134.0" mnemonicParsing="false" text="log as manager ">
+      <Button fx:id="login_btn" layoutX="20.0" layoutY="257.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="106.0" text="Log in" />
+      <RadioButton fx:id="manager_radio" layoutX="18.0" layoutY="129.0" mnemonicParsing="false" text="log as manager ">
          <toggleGroup>
             <ToggleGroup fx:id="type" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="worker_radio" layoutX="223.0" layoutY="134.0" mnemonicParsing="false" text="log as worker" toggleGroup="$type" />
-      <RadioButton fx:id="customer_radio" layoutX="346.0" layoutY="134.0" mnemonicParsing="false" text="log as customer" toggleGroup="$type" />
-      <TextField fx:id="email_bar" layoutX="127.0" layoutY="29.0" prefHeight="25.0" prefWidth="251.0" promptText="email:" />
-      <Label fx:id="error_msg_info" layoutX="191.0" layoutY="1.0" text="error_msg_info" textFill="#ae0f0f">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Label fx:id="error_msg_btn" layoutX="193.0" layoutY="100.0" text="error_msg_btn" textFill="#ae0f0f">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <PasswordField fx:id="password_bar" layoutX="127.0" layoutY="65.0" prefHeight="25.0" prefWidth="251.0" promptText="password:" />
-      <Button fx:id="log_as_occasional_customer_btn" layoutX="308.0" layoutY="189.0" mnemonicParsing="false" onAction="#log_as_occasional_customer" prefHeight="25.0" prefWidth="178.0" text="Log as occasional customer" />
-      <Button fx:id="log_as_in_advance_customer_btn" layoutX="308.0" layoutY="227.0" mnemonicParsing="false" onAction="#log_as_in_advance_customer" prefHeight="25.0" prefWidth="178.0" text="I ordered in advance" />
+      <RadioButton fx:id="worker_radio" layoutX="18.0" layoutY="164.0" mnemonicParsing="false" text="log as worker" toggleGroup="$type" />
+      <RadioButton fx:id="customer_radio" layoutX="18.0" layoutY="95.0" mnemonicParsing="false" text="log as customer" toggleGroup="$type" />
+      <TextField fx:id="email_bar" layoutX="17.0" layoutY="14.0" prefHeight="25.0" prefWidth="460.0" promptText="email:" />
+      <PasswordField fx:id="password_bar" layoutX="17.0" layoutY="50.0" prefHeight="25.0" prefWidth="460.0" promptText="password:" />
+      <Button fx:id="log_as_occasional_customer_btn" layoutX="310.0" layoutY="162.0" mnemonicParsing="false" onAction="#log_as_occasional_customer" prefHeight="25.0" prefWidth="178.0" text="Log as occasional customer" />
+      <Button fx:id="log_as_in_advance_customer_btn" layoutX="310.0" layoutY="127.0" mnemonicParsing="false" onAction="#log_as_in_advance_customer" prefHeight="25.0" prefWidth="178.0" text="I ordered in advance" />
+      <Button fx:id="login_view_customer_sign_in_btn" layoutX="310.0" layoutY="93.0" mnemonicParsing="false" onAction="#login_view_customer_sign_in" prefHeight="25.0" prefWidth="178.0" text="Sign in for customers" />
+      <ProgressIndicator fx:id="login_view_progress_bar" layoutX="208.0" layoutY="206.0" prefHeight="34.0" prefWidth="39.0" visible="false">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </ProgressIndicator>
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </AnchorPane>
