--- a/CPS_client/src/CPS/View/InAdvanceCustomer.fxml
+++ b/CPS_client/src/CPS/View/InAdvanceCustomer.fxml
@@ -16,7 +16,7 @@
       <Label layoutX="100.0" layoutY="59.0" text="id:" />
       <Label layoutX="95.0" layoutY="210.0" text="car number:" />
       <DatePicker fx:id="In_Advance_Customer_end_date" layoutX="180.0" layoutY="381.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Date" />
-      <TextField fx:id="In_Advance_Customer_end_time" layoutX="180.0" layoutY="417.0" promptText="hour : minute" />
+      <TextField fx:id="In_Advance_Customer_end_time" layoutX="186.0" layoutY="417.0" promptText="hour : minute" />
       <TextField fx:id="In_Advance_Customer_email" layoutX="180.0" layoutY="268.0" promptText="email:" />
       <TextField fx:id="In_Advance_Customer_car_park" layoutX="180.0" layoutY="238.0" promptText="car park:" />
       <TextField fx:id="In_Advance_Customer_id" layoutX="180.0" layoutY="55.0" promptText="id:" />
@@ -34,9 +34,9 @@
       <Label layoutX="95.0" layoutY="350.0" prefHeight="17.0" prefWidth="52.0" text="start time" />
       <TextField fx:id="In_Advance_Customer_first_name" layoutX="180.0" layoutY="86.0" promptText="first name:" />
       <Label layoutX="95.0" layoutY="90.0" text="first name:" />
-      <TextField fx:id="In_Advance_Customer_id2" layoutX="180.0" layoutY="124.0" promptText="last name:" />
+      <TextField fx:id="In_Advance_Customer_last_name" layoutX="180.0" layoutY="124.0" promptText="last name:" />
       <Label layoutX="93.0" layoutY="128.0" text="last name:" />
-      <TextField fx:id="In_Advance_Customer_id3" layoutX="180.0" layoutY="161.0" promptText="phone number:" />
+      <TextField fx:id="In_Advance_Customer_phone_number" layoutX="180.0" layoutY="161.0" promptText="phone number:" />
       <Label layoutX="91.0" layoutY="165.0" text="phone number:" />
    </children>
 </AnchorPane>
