--- a/CPS_client/bin/CPS/View/OccasionalCustomer.fxml
+++ b/CPS_client/bin/CPS/View/OccasionalCustomer.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -7,10 +11,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
-      <Button fx:id="Occasional_Customer_back_btn" layoutX="14.0" layoutY="265.0" mnemonicParsing="false" onAction="#Occasional_Customer_back" prefHeight="27.0" prefWidth="74.0" text="&lt;&lt; back" />
-      <Button fx:id="Occasional_Customer_order" layoutX="176.0" layoutY="252.0" mnemonicParsing="false" onAction="#Occasional_Customer_Order" prefHeight="25.0" prefWidth="149.0" text="Order" />
+      <Button fx:id="Occasional_Customer_back_btn" layoutX="14.0" layoutY="315.0" mnemonicParsing="false" onAction="#Occasional_Customer_back" prefHeight="27.0" prefWidth="74.0" text="&lt;&lt; back" />
+      <Button fx:id="Occasional_Customer_order" layoutX="176.0" layoutY="302.0" mnemonicParsing="false" onAction="#Occasional_Customer_Order" prefHeight="25.0" prefWidth="149.0" text="Order" />
       <Label layoutX="77.0" layoutY="9.0" text="please provide the following requirements:" underline="true">
          <font>
             <Font size="18.0" />
@@ -18,16 +22,21 @@
       </Label>
       <TextField fx:id="Occasional_Customer_id" layoutX="176.0" layoutY="45.0" promptText="id:" />
       <TextField fx:id="Occasional_Customer_car_number" layoutX="176.0" layoutY="76.0" promptText="car number:" />
-      <TextField fx:id="Occasional_Customer_car_park" layoutX="176.0" layoutY="108.0" promptText="car park:" />
-      <TextField fx:id="Occasional_Customer_email" layoutX="176.0" layoutY="138.0" promptText="email:" />
-      <DatePicker fx:id="Occasional_Customer_end_date" layoutX="176.0" layoutY="171.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Date" />
-      <TextField fx:id="Occasional_Customer_end_time" layoutX="176.0" layoutY="207.0" promptText="hh:mm" />
+      <TextField fx:id="Occasional_Customer_email" layoutX="176.0" layoutY="198.0" promptText="email:" />
+      <DatePicker fx:id="Occasional_Customer_end_date" layoutX="176.0" layoutY="161.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Date" />
+      <TextField fx:id="Occasional_Customer_end_time" layoutX="176.0" layoutY="237.0" promptText="hh:mm" />
       <Label layoutX="76.0" layoutY="36.0" />
       <Label layoutX="80.0" layoutY="80.0" text="car number:" />
       <Label layoutX="80.0" layoutY="49.0" text="id:" />
-      <Label layoutX="80.0" layoutY="112.0" prefHeight="17.0" prefWidth="74.0" text="parking lot:" />
-      <Label layoutX="80.0" layoutY="142.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
-      <Label layoutX="80.0" layoutY="175.0" prefHeight="17.0" prefWidth="74.0" text="end date:" />
-      <Label layoutX="80.0" layoutY="211.0" prefHeight="17.0" prefWidth="74.0" text="end time" />
+      <Label layoutX="80.0" layoutY="121.0" prefHeight="17.0" prefWidth="74.0" text="parking lot:" />
+      <Label layoutX="80.0" layoutY="164.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
+      <Label layoutX="80.0" layoutY="205.0" prefHeight="17.0" prefWidth="74.0" text="end date:" />
+      <Label layoutX="80.0" layoutY="241.0" prefHeight="17.0" prefWidth="74.0" text="end time" />
+      <SplitMenuButton fx:id="Occasional_Customer_parking_lot_btn" layoutX="176.0" layoutY="117.0" mnemonicParsing="false" text="SplitMenuButton">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+      </SplitMenuButton>
    </children>
 </AnchorPane>
