--- a/CPS_client/bin/CPS/View/OccasionalCustomer.fxml
+++ b/CPS_client/bin/CPS/View/OccasionalCustomer.fxml
@@ -20,19 +20,19 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="Occasional_Customer_id" layoutX="176.0" layoutY="45.0" promptText="id:" />
-      <TextField fx:id="Occasional_Customer_car_number" layoutX="176.0" layoutY="76.0" promptText="car number:" />
-      <TextField fx:id="Occasional_Customer_email" layoutX="176.0" layoutY="160.0" promptText="email:" />
-      <DatePicker fx:id="Occasional_Customer_end_date" layoutX="176.0" layoutY="201.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Date" />
+      <TextField fx:id="Occasional_Customer_id" layoutX="176.0" layoutY="45.0" promptText="ID" />
+      <TextField fx:id="Occasional_Customer_car_number" layoutX="176.0" layoutY="76.0" promptText="Car number" />
+      <TextField fx:id="Occasional_Customer_email" layoutX="176.0" layoutY="160.0" promptText="Email" />
+      <DatePicker fx:id="Occasional_Customer_end_date" layoutX="176.0" layoutY="201.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose date" />
       <TextField fx:id="Occasional_Customer_end_time" layoutX="176.0" layoutY="237.0" promptText="hh:mm" />
       <Label layoutX="76.0" layoutY="36.0" />
       <Label layoutX="80.0" layoutY="80.0" text="car number:" />
       <Label layoutX="80.0" layoutY="49.0" text="id:" />
-      <Label layoutX="80.0" layoutY="121.0" prefHeight="17.0" prefWidth="74.0" text="parking lot:" />
+      <Label layoutX="80.0" layoutY="121.0" prefHeight="17.0" prefWidth="80.0" text="parking lot:" />
       <Label layoutX="80.0" layoutY="164.0" prefHeight="17.0" prefWidth="52.0" text="email:" />
       <Label layoutX="80.0" layoutY="205.0" prefHeight="17.0" prefWidth="74.0" text="end date:" />
       <Label layoutX="80.0" layoutY="241.0" prefHeight="17.0" prefWidth="74.0" text="end time" />
-      <SplitMenuButton fx:id="Occasional_Customer_parking_lot_btn" layoutX="176.0" layoutY="117.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="SplitMenuButton">
+      <SplitMenuButton fx:id="Occasional_Customer_parking_lot_btn" layoutX="176.0" layoutY="117.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Select">
         <items>
           <MenuItem mnemonicParsing="false" text="Action 1" />
           <MenuItem mnemonicParsing="false" text="Action 2" />
