--- a/CPS_client/src/CPS/View/loginView.fxml
+++ b/CPS_client/src/CPS/View/loginView.fxml
@@ -33,7 +33,7 @@
             <Insets />
          </opaqueInsets>
       </ProgressIndicator>
-      <RadioButton layoutX="19.0" layoutY="196.0" mnemonicParsing="false" text="log as CEO" />
+      <RadioButton fx:id="ceo_radio" layoutX="19.0" layoutY="196.0" mnemonicParsing="false" text="log as CEO" toggleGroup="$type" />
    </children>
    <opaqueInsets>
       <Insets />
