--- a/CPS_client/src/CPS/View/CeoView.fxml
+++ b/CPS_client/src/CPS/View/CeoView.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
       <Button fx:id="Ceo_View_back_btn" layoutX="25.0" layoutY="253.0" mnemonicParsing="false" onAction="#Ceo_View_back" text="&lt;&lt; back" />
       <Button fx:id="Ceo_View_print_report_btn" layoutX="360.0" layoutY="88.0" mnemonicParsing="false" onAction="#Ceo_View_print_report" prefHeight="25.0" prefWidth="130.0" text="print report" />
@@ -18,8 +17,8 @@
           <MenuItem mnemonicParsing="false" text="Action 2" />
         </items>
       </SplitMenuButton>
-      <Text layoutX="261.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="choose location:" />
-      <Text layoutX="261.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="choose level:" />
+      <Text layoutX="248.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="choose location:" />
+      <Text layoutX="248.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="choose level:" />
       <SplitMenuButton fx:id="Ceo_View_level_menu" layoutX="360.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Level">
          <items>
             <MenuItem mnemonicParsing="false" text="Action 1" />
