--- a/CPS_client/src/CPS/View/CustomerView.fxml
+++ b/CPS_client/src/CPS/View/CustomerView.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CPS.View.PersonViewController">
    <children>
       <Button fx:id="customer_view_log_out_btn" layoutX="26.0" layoutY="239.0" mnemonicParsing="false" onAction="#customer_view_log_out" text="log out" />
       <Label fx:id="customer_view_label" layoutX="46.0" layoutY="29.0" text="hello customer" />
-      <Label fx:id="customer_view_label1" layoutX="26.0" layoutY="86.0" text="you have" />
-      <Label fx:id="customer_view_num_msg_label" layoutX="83.0" layoutY="86.0" prefHeight="17.0" prefWidth="24.0" text="0" />
-      <Label fx:id="customer_view_label12" layoutX="100.0" layoutY="86.0" text="new massages:" />
-      <Button fx:id="customer_view_read_massages_btn" layoutX="26.0" layoutY="113.0" mnemonicParsing="false" onAction="#customer_view_read_massages" prefHeight="58.0" prefWidth="97.0" text="read massages" />
+      <Label fx:id="customer_view_label1" layoutX="30.0" layoutY="86.0" text="you have" />
+      <Label fx:id="customer_view_num_msg_label" layoutX="94.0" layoutY="86.0" prefHeight="17.0" prefWidth="24.0" text="0" />
+      <Label fx:id="customer_view_label12" layoutX="116.0" layoutY="86.0" text="new massages:" />
+      <Button fx:id="customer_view_read_massages_btn" layoutX="26.0" layoutY="123.0" mnemonicParsing="false" onAction="#customer_view_read_massages" prefHeight="58.0" prefWidth="124.0" text="read massages" />
       <Button fx:id="customer_view_complaint_btn" layoutX="320.0" layoutY="267.0" mnemonicParsing="false" onAction="#customer_view_complaint" prefHeight="25.0" prefWidth="178.0" text="complaints" />
       <Button fx:id="customer_view_start_parking_btn" layoutX="320.0" layoutY="204.0" mnemonicParsing="false" onAction="#customer_view_start_parking" prefHeight="25.0" prefWidth="178.0" text="start parking" />
       <Button fx:id="customer_view_end_parking_btn" layoutX="320.0" layoutY="236.0" mnemonicParsing="false" onAction="#customer_view_end_parking" prefHeight="25.0" prefWidth="178.0" text="end parking" />
